--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+header {
+  padding: 154px 0 100px;
+}
 
+@media (min-width: 992px) {
+  header {
+    padding: 156px 0 100px;
+  }
+}
+section {
+  padding: 150px 0;
+}
 
 /*# sourceMappingURL=style.css.map */
