--- a/css/style.scss
+++ b/css/style.scss
@@ -1,2 +1,14 @@
-$color:white;
 
+header {
+  padding: 154px 0 100px;
+}
+
+@media (min-width: 992px) {
+  header {
+    padding: 156px 0 100px;
+  }
+}
+
+section {
+  padding: 150px 0;
+}
