--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,114 @@
-header {
-  padding: 154px 0 100px;
+/** GENERAL STYLE **/
+html, body, * {
+  font-family: Roboto, sans-serif;
 }
 
-@media (min-width: 992px) {
-  header {
-    padding: 156px 0 100px;
-  }
+* {
+  -webkit-transition: all 125ms ease-in-out !important;
+  -moz-transition: all 125ms ease-in-out !important;
+  -ms-transition: all 125ms ease-in-out !important;
+  -o-transition: all 125ms ease-in-out !important;
+  transition: all 125ms ease-in-out !important;
 }
 
-section {
-  padding: 150px 0;
+html, body {
+  box-sizing: border-box !important;
 }
 
-.form-signin {
-  width: 100%;
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
+h1, h2, h3, h4, h5, h6 {
+  color: #666666;
+  font-weight: normal;
+}
+h1.subtitle, h2.subtitle, h3.subtitle, h4.subtitle, h5.subtitle, h6.subtitle {
+  color: #607D8B;
+  font-weight: 300;
 }
 
-.form-signin .checkbox {
-  font-weight: 400;
+.bg-light-blue {
+  background-color: #37A8F2;
+}
+.bg-light-blue.hover-lighten:hover {
+  background-color: #4fb2f4;
 }
 
-.form-signin .form-control {
+.bg-dark-blue {
+  background-color: #37A8F2;
+}
+.bg-dark-blue.hover-lighten:hover {
+  background-color: #4fb2f4;
+}
+
+/** --END OF GENERAL STYLE **/
+/** TOP PAGE **/
+#logoMenu {
+  display: inline-block;
+  max-width: 200px;
+}
+
+/** -- END TOP PAGE **/
+/** HOME PAGE **/
+main#mainPage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FAFCFD;
+  height: 80vh;
+}
+main#mainPage .container {
+  margin-top: -10vh;
+}
+
+/** --END HOME PAGE **/
+/** LOGIN PAGE **/
+main#loginPage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FAFCFD;
+  height: 80vh;
+}
+main#loginPage .form-signin {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 25%;
+}
+main#loginPage .form-signin .form-control {
   position: relative;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   height: auto;
   padding: 10px;
   font-size: 16px;
 }
-
-.form-signin .form-control:focus {
+main#loginPage .form-signin .form-control:focus {
   z-index: 2;
 }
-
-.form-signin input[type="email"] {
+main#loginPage .form-signin input[type=email] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-
-.form-signin input[type="password"] {
+main#loginPage .form-signin input[type=password] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+/** --END LOGIN PAGE **/
+/** FOOTER **/
+footer {
+  background-color: #37A8F2;
+  min-height: 13vh;
+  display: flex;
+  justify-content: center;
+  align-item: center;
+}
+footer .container {
+  align-self: center;
+  height: 100%;
+}
+
+/** --END FOOTER**/
+
 /*# sourceMappingURL=style.css.map */
