--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,21 @@ $lightBlue: #37A8F2;
 $darkGrey: #666666;
 $lightGrey: #607D8B;
 
+/** BOOTSTRAP grid: **/
+
+$grid-breakpoints: (
+  // Extra small screen / phone
+        xs: 0,
+  // Small screen / phone
+        sm: 576px,
+  // Medium screen / tablet
+        md: 768px,
+  // Large screen / desktop
+        lg: 992px,
+  // Extra large screen / wide desktop
+        xl: 1200px
+);
+
 /** GENERAL STYLE **/
 %basic-font-family {
   font-family: Roboto, sans-serif;
@@ -27,6 +42,7 @@ $lightGrey: #607D8B;
 html, body {
   @extend %basic-font-family;
   box-sizing: border-box !important;
+  height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -129,6 +145,100 @@ main {
 }
 
 /** --END LOGIN PAGE **/
+
+/** QUIZZLIST PAGE **/
+
+main {
+  &#quizzListPage {
+    padding-top: 10vh;
+    background-color: $bgLight;
+    min-height: 80vh;
+
+    .quizz-box {
+      padding-right: 0px;
+      padding-left: 0px;
+      border: 2px solid $darkGrey;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      overflow: hidden;
+
+      &:hover {
+        background-color: $darkBlue;
+        border: 2px solid $darkBlue;
+
+        & .description, & .title {
+          color: white !important;
+        }
+
+        & .bottom-button {
+          bottom: 0px;
+        }
+      }
+
+      .title-description-container {
+        position: relative;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        align-content: center;
+        height: 20vh;
+
+        .title {
+          color: $darkGrey;
+          width: 100%;
+          text-align: center;
+          font-weight: 500;
+        }
+
+        .description {
+          width: 100%;
+          text-align: center;
+          font-weight: 300;
+        }
+      }
+
+      a {
+        text-decoration: none;
+        position: absolute;
+
+        .bottom-button {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          align-content: center;
+          padding: 0;
+          margin: 0;
+          border: 0px;
+          position: relative;
+          bottom: -8vh;
+
+          background-color: $darkGrey;
+          width: 100%;
+          height: 4vh;
+          font-weight: 500;
+
+          &:hover {
+            background-color: $darkBlue;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+  }
+
+  @media (max-width: #{map-get($grid-breakpoints, md)}) {
+    .container {
+      width: 100%;
+      padding-right: 0px;
+      padding-left: 0px;
+    }
+  }
+}
+
+/** --END QUIZZLIST PAGE **/
 
 /** FOOTER **/
 
