--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,40 @@
 /** GENERAL STYLE **/
-html, body, * {
+*, html, body {
   font-family: Roboto, sans-serif;
 }
 
 * {
   -webkit-transition: all 125ms ease-in-out !important;
-  -moz-transition: all 125ms ease-in-out !important;
-  -ms-transition: all 125ms ease-in-out !important;
-  -o-transition: all 125ms ease-in-out !important;
   transition: all 125ms ease-in-out !important;
 }
 
 html, body {
-  box-sizing: border-box !important;
+  -webkit-box-sizing: border-box !important;
+          box-sizing: border-box !important;
 }
 
 h1, h2, h3, h4, h5, h6 {
   color: #666666;
   font-weight: normal;
 }
+
 h1.subtitle, h2.subtitle, h3.subtitle, h4.subtitle, h5.subtitle, h6.subtitle {
   color: #607D8B;
   font-weight: 300;
 }
 
-.bg-light-blue {
-  background-color: #37A8F2;
+.bg-brandblue {
+  background-color: #378CEF;
 }
-.bg-light-blue.hover-lighten:hover {
-  background-color: #4fb2f4;
+
+.bg-brandblue.hover-lighten:hover {
+  background-color: #4f9af1;
 }
 
 .bg-dark-blue {
   background-color: #37A8F2;
 }
+
 .bg-dark-blue.hover-lighten:hover {
   background-color: #4fb2f4;
 }
@@ -48,12 +49,19 @@ h1.subtitle, h2.subtitle, h3.subtitle, h4.subtitle, h5.subtitle, h6.subtitle {
 /** -- END TOP PAGE **/
 /** HOME PAGE **/
 main#mainPage {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #FAFCFD;
   height: 80vh;
 }
+
 main#mainPage .container {
   margin-top: -10vh;
 }
@@ -61,35 +69,56 @@ main#mainPage .container {
 /** --END HOME PAGE **/
 /** LOGIN PAGE **/
 main#loginPage {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #FAFCFD;
   height: 80vh;
 }
+
 main#loginPage .form-signin {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 25%;
 }
+
 main#loginPage .form-signin .form-control {
   position: relative;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   height: auto;
   padding: 10px;
   font-size: 16px;
 }
+
 main#loginPage .form-signin .form-control:focus {
   z-index: 2;
 }
-main#loginPage .form-signin input[type=email] {
+
+main#loginPage .form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-main#loginPage .form-signin input[type=password] {
+
+main#loginPage .form-signin input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -98,17 +127,23 @@ main#loginPage .form-signin input[type=password] {
 /** --END LOGIN PAGE **/
 /** FOOTER **/
 footer {
-  background-color: #37A8F2;
+  background-color: #378CEF;
   min-height: 13vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   align-item: center;
 }
+
 footer .container {
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   height: 100%;
 }
 
 /** --END FOOTER**/
-
 /*# sourceMappingURL=style.css.map */
