--- a/css/style.css
+++ b/css/style.css
@@ -86,12 +86,12 @@ main#loginPage .form-signin .form-control {
 main#loginPage .form-signin .form-control:focus {
   z-index: 2;
 }
-main#loginPage .form-signin input[type=email] {
+main#loginPage .form-signin input[type=email], main#loginPage .form-signin input[type=text], main#loginPage .form-signin input[type=password]:not(#inputPasswordCheck) {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-main#loginPage .form-signin input[type=password] {
+main#loginPage .form-signin input[type=password]#inputPasswordCheck {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
