--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,23 @@
+.navbar-toggler {
+  border: none !important;
+}
+
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(15, 146, 231, 0.99)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
 /** BOOTSTRAP grid: **/
 /** GENERAL STYLE **/
 html, body, * {
   font-family: Roboto, sans-serif;
+}
+
+main#quizzListPage, main#loginPage, main#mainPage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FAFCFD;
+  min-height: 80vh;
 }
 
 * {
@@ -63,32 +79,32 @@ h1.subtitle, h2.subtitle, h3.subtitle, h4.subtitle, h5.subtitle, h6.subtitle {
 
 /** -- END TOP PAGE **/
 /** HOME PAGE **/
-main#mainPage {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #FAFCFD;
-  height: 80vh;
-}
 main#mainPage .container {
   margin-top: -10vh;
 }
 
 /** --END HOME PAGE **/
 /** LOGIN PAGE **/
-main#loginPage {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #FAFCFD;
-  height: 80vh;
-}
 main#loginPage .form-signin {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 25%;
+}
+@media (max-width: 992px) {
+  main#loginPage .form-signin {
+    width: 55%;
+  }
+}
+@media (max-width: 768px) {
+  main#loginPage .form-signin {
+    width: 80%;
+  }
+}
+@media (max-width: 576px) {
+  main#loginPage .form-signin {
+    width: 90%;
+  }
 }
 main#loginPage .form-signin .form-control {
   position: relative;
@@ -114,9 +130,8 @@ main#loginPage .form-signin input[type=password]#inputPasswordConfirm {
 /** --END LOGIN PAGE **/
 /** QUIZZLIST PAGE **/
 main#quizzListPage {
-  padding-top: 10vh;
-  background-color: #FAFCFD;
-  min-height: 80vh;
+  padding-top: 5vh;
+  margin-bottom: 5vh;
 }
 main#quizzListPage .quizz-box {
   padding-right: 0px;
@@ -182,7 +197,7 @@ main#quizzListPage .quizz-box a .bottom-button:hover {
 }
 @media (max-width: 768px) {
   main .container {
-    width: 100%;
+    width: 95%;
     padding-right: 0px;
     padding-left: 0px;
   }
