--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,5 @@
-$CustomColor: rgb(56, 135, 224);
-$bgLight: #FAFCFD;
-$lightBlue: #37A8F2;
-$darkBlue: darken(#37A8F2, 10%);
-$darkGrey: #666666;
-$lightGrey: #607D8B;
+@import "variables_ID";
+@import "bootstrap_modif";
 
 /** BOOTSTRAP grid: **/
 
@@ -23,6 +19,14 @@ $grid-breakpoints: (
 /** GENERAL STYLE **/
 %basic-font-family {
   font-family: Roboto, sans-serif;
+}
+
+%main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $bgLight;
+  min-height: 80vh;
 }
 
 @mixin transition($duration: 125ms, $type: ease-in-out) {
@@ -90,6 +94,7 @@ h1, h2, h3, h4, h5, h6 {
 /** --END OF GENERAL STYLE **/
 
 /** TOP PAGE **/
+
 #logoMenu {
   display: inline-block;
   max-width: 200px;
@@ -101,11 +106,7 @@ h1, h2, h3, h4, h5, h6 {
 
 main {
   &#mainPage {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $bgLight;
-    height: 80vh;
+    @extend %main;
 
     .container {
       margin-top: -10vh;
@@ -119,19 +120,25 @@ main {
 
 main {
   &#loginPage {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    background-color: $bgLight;
-    height: 80vh;
+    @extend %main;
 
     .form-signin {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      width: 25%;
+
+      @media (max-width: #{map-get($grid-breakpoints, lg)}) {
+        width: 55%;
+      }
+
+      @media (max-width: #{map-get($grid-breakpoints, md)}) {
+        width: 80%;
+      }
+
+      @media (max-width: #{map-get($grid-breakpoints, sm)}) {
+        width: 90%;
+      }
 
       & .form-control {
         position: relative;
@@ -166,9 +173,9 @@ main {
 
 main {
   &#quizzListPage {
-    padding-top: 10vh;
-    background-color: $bgLight;
-    min-height: 80vh;
+    @extend %main;
+    padding-top: 5vh;
+    margin-bottom: 5vh;
 
     .quizz-box {
       padding-right: 0px;
@@ -246,7 +253,7 @@ main {
 
   @media (max-width: #{map-get($grid-breakpoints, md)}) {
     .container {
-      width: 100%;
+      width: 95%;
       padding-right: 0px;
       padding-left: 0px;
     }
