Fix typo and title in index

--- a/VueJsLaravel/public/css/style.css
+++ b/VueJsLaravel/public/css/style.css
@@ -210,9 +210,8 @@ footer {
   min-height: 13vh;
   display: flex;
   justify-content: center;
-  align-item: center;
 }
-footer .container {
+align-conten footer .container {
   align-self: center;
   height: 100%;
 }
