--- a/VueJsLaravel/public/css/style.scss
+++ b/VueJsLaravel/public/css/style.scss
@@ -270,7 +270,8 @@ footer {
     min-height: 13vh;
     display: flex;
     justify-content: center;
-    align-conten
+    align-content: center;
+    align-items: center;
 
     & .container {
         align-self: center;
