--- a/VueJsLaravel/public/css/style.css
+++ b/VueJsLaravel/public/css/style.css
@@ -141,8 +141,8 @@ main#quizzListPage {
   margin-bottom: 5vh;
 }
 main#quizzListPage .quizz-box {
-  padding-right: 0px;
-  padding-left: 0px;
+  padding-right: 0;
+  padding-left: 0;
   border: 2px solid #666666;
   display: flex;
   flex-direction: column;
@@ -160,7 +160,6 @@ main#quizzListPage .quizz-box:hover .bottom-button {
   bottom: 0px;
 }
 main#quizzListPage .quizz-box .title-description-container {
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -190,7 +189,7 @@ main#quizzListPage .quizz-box a .bottom-button {
   align-content: center;
   padding: 0;
   margin: 0;
-  border: 0px;
+  border: 0;
   position: relative;
   bottom: -8vh;
   background-color: #666666;
@@ -205,12 +204,61 @@ main#quizzListPage .quizz-box a .bottom-button:hover {
 @media (max-width: 768px) {
   main .container {
     width: 95%;
-    padding-right: 0px;
-    padding-left: 0px;
+    padding-right: 0;
+    padding-left: 0;
   }
 }
 
 /** --END QUIZZLIST PAGE **/
+/** QUIZZ_QUESTION PAGE **/
+.quizzContainer .quizzTitle {
+  font-size: 24px;
+  color: #666666;
+}
+@media (max-width: 768px) {
+  .quizzContainer .quizzTitle {
+    font-size: 24px;
+  }
+}
+@media (max-width: 576px) {
+  .quizzContainer .quizzTitle {
+    font-size: 16px;
+  }
+}
+.quizzContainer .quizzQuestion {
+  font-size: 32px;
+  color: #607D8B;
+}
+@media (max-width: 768px) {
+  .quizzContainer .quizzQuestion {
+    font-size: 28px;
+  }
+}
+@media (max-width: 576px) {
+  .quizzContainer .quizzQuestion {
+    font-size: 26px;
+  }
+}
+.quizzContainer .quizzImage img {
+  max-height: 50vh;
+  max-width: 80vw;
+  background-size: cover;
+}
+.quizzContainer .responsesContainer .btn {
+  padding: 20px !important;
+}
+@media (min-width: 768px) {
+  .quizzContainer .responsesContainer .btn {
+    width: 60%;
+  }
+}
+@media (max-width: 576px) {
+  .quizzContainer .responsesContainer .btn {
+    width: 90%;
+  }
+}
+
+/** --END QUIZZ_QUESTION PAGE **/
 /** FOOTER **/
 footer {
   background-color: #378CEF;
