--- a/VueJsLaravel/public/css/style.scss
+++ b/VueJsLaravel/public/css/style.scss
@@ -181,7 +181,7 @@ main {
 /** QUIZZLIST PAGE **/
 
 main {
-    &#quizzListPage {
+    &#quizzListPage:not(.questions) {
         @extend %main;
         padding-top: 5vh;
         margin-bottom: 5vh;
