--- a/css/style.scss
+++ b/css/style.scss
@@ -270,6 +270,9 @@ footer {
   display: flex;
   justify-content: center;
   align-item: center;
+  position: relative !important;
+  bottom: 0px !important;
+  left: 0px !important;
 
   & .container {
     align-self: center;
