--- a/VueJsLaravel/public/css/style.scss
+++ b/VueJsLaravel/public/css/style.scss
@@ -212,6 +212,7 @@ main {
 /** QUIZZLIST PAGE **/
 
 main {
+    background-color: $bgLight;
     &#quizzListPage:not(.questions) {
         @extend %main;
         padding-top: 5vh;
